<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="current_job_title">Current Job</string>
    <string name="comparison_settings_title">Comparison Settings</string>
    <string name="add_job_offer_title">Add Job Offer</string>
    <string name="view_job_offers_title">Compare Job Offers</string>

    <string name="job_field_title">Title</string>
    <string name="job_field_description">Company</string>
    <string name="job_field_location">Location</string>
    <string name="job_field_yearly_salary">Yearly Salary</string>
    <string name="job_field_yearly_bonus">Yearly Bonus</string>
    <string name="job_field_yearly_stock_options">Yearly Stock Options</string>
    <string name="job_field_home_buying_program_fund">Home Buying Program Fund</string>
    <string name="job_field_personal_choice_holidays">Personal Choice Holidays</string>
    <string name="job_field_monthly_internet_stipend">Monthly Internet Stipend</string>

    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_compare">Compare</string>

    <string name="element_text">Text</string>
    <string name="tableHeaderAttribute">Attribute</string>
    <string name="tableHeaderFirstJob">First Job</string>
    <string name="tableHeaderSecondJob">Second Job</string>
    <string name="job_adjusted_field_yearly_salary">Adjusted Salary</string>
    <string name="job_adjusted_field_yearly_bonus">Adjusted Bonus</string>

    <string name="enterAnotherOffer">Enter another job offer</string>
    <string name="returnToMainMenu">Return to Main Menu</string>
    <string name="compareWithCurrentJob">Compare with Current Job</string>
    <string name="doAnotherJobOfferComparison">Perform another comparison</string>

</resources>