<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button

            android:id="@+id/buttonCurrentJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_job_title" />

        <Button
            android:id="@+id/buttonAddJobOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_job_offer_title" />

        <Button

            android:id="@+id/buttonComparisonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comparison_settings_title" />

        <Button
            android:id="@+id/buttonCompareJobList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_job_offers_title" />

<!--        <Button-->
<!--            android:id="@+id/buttonResetDB"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Reset DB" />-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>